删除vue自带的margin值

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>freepay</title>
   </head>
+
+  <!--删除vue自带的margin值-->
+  <style>
+    body{
+      margin: 0px;
+    }
+  </style>
+  
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
